# drone

./: .env.drone  .gitignore  pyproject.toml  requirements.txt  ssh_agent.sh  start.py  test.py
drone/: config.py  tello.py  utils.py
