[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["yalr098 <yvesromero1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
av = "^10.0.0"
opencv-python = "^4.6.0"
numpy = "^1.23.4"
Pillow = "^9.3.0"
imutils = "^0.5.4"
websocket-client = "^1.4.2"
rel = "^0.4.7"
PyBoof = "^0.41"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
